Add a few more questions.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -433,19 +433,41 @@
 \qstop
 
 \qpaper{48}{The Morontia Life}
+
 \qpaper{49}{The Inhabited Worlds}
+
 \qpaper{50}{The Planetary Princes}
+
 \qpaper{51}{The Planetary Adams}
+
 \qpaper{52}{Planetary Mortal Epochs}
+
 \qpaper{53}{The Lucifer Rebellion}
+
 \qpaper{54}{Problems of the Lucifer Rebellion}
+
 \qpaper{55}{The Spheres of Light and Life}
+
 \qpaper{56}{Universal Unity}
+
 \qpaper{57}{The Origin of Urantia}
+
+\qstart{How long ago was our Sun born?}
+{6,000 years}{0}
+{4.6 billion years}{0}
+{6 billion years}{1}
+{9 billion years}{0}
+{10 billion years}{0}
+\qstop
+
 \qpaper{58}{Life Establishment on Urantia}
+
 \qpaper{59}{The Marine\hyp{}Life Era on Urantia}
+
 \qpaper{60}{Urantia During the Early Land\hyp{}Life Era}
+
 \qpaper{61}{The Mammalian Era on Urantia}
+
 \qpaper{62}{The Dawn Races of Early Man}
 
 \qpaper{63}{The First Human Family}
@@ -470,6 +492,30 @@
 \qpaper{65}{The Overcontrol of Evolution}
 
 \qpaper{66}{The Planetary Prince of Urantia}
+
+\qstart{What or who is a fandor?}
+{A kind of fish}{0}
+{A kind of bird}{1}
+{A kind of lizard}{0}
+{A kind of snake}{0}
+{A kind of angel}{0}
+\qstop
+
+\qstart{Which of these were employed as passenger birds?}
+{ostriches}{0}
+{fandors}{1}
+{eagles}{0}
+{pigeons}{0}
+{crows}{0}
+\qstop
+
+\qstart{When did fandors become extinct?}
+{30,000+ years ago}{1}
+{50,000+ years ago}{0}
+{150,000+ years ago}{0}
+{250,000+ years ago}{0}
+{1,000,000+ years ago}{0}
+\qstop
 
 \qstart{How long did it take to spread the news of the arrival of the Planetary Prince Caligastia around the world?}
 {1000 years}{1}
@@ -730,6 +776,17 @@
 \qpaper{92}{The Later Evolution of Religion}
 
 \qpaper{93}{Machiventa Melchizedek}
+
+\qstart{Which of these was the teacher of Abraham?}
+{Lutentia}{0}
+{Lucifer}{0}
+{Satan}{0}
+{Tabamantia}{0}
+{Machiventa Melchizedek}{1}
+{Mantutia Melchizedek}{0}
+{The Father Melchizedek}{0}
+{Yahweh, the God of Israel}{0}
+\qstop
 
 \qpaper{94}{The Melchizedek Teachings in the Orient}
 
@@ -1044,6 +1101,13 @@
 \qpaper{184}{Before the Sanhedrin Court}
 
 \qpaper{185}{The Trial Before Pilate}
+
+\qstart{When was Jesus of Nazareth murdered by the Jews?}
+{1 April 30 A.D.}{0}
+{7 April 30 A.D.}{1}
+{15 April 33 A.D.}{0}
+{14 April 30 A.D.}{0}
+\qstop
 
 \qpaper{186}{Just Before the Crucifixion}
 
