Added a few more questions.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -224,6 +224,13 @@
 {absolute}{1}
 \qstop
 
+\qstart{Which of these is \bibemph{not} one of the Seven Absolutes of Infinity?}
+{Universal Father}{0}
+{Eternal Son}{0}
+{Isle of Paradise}{0}
+{Supreme Being}{1}
+\qstop
+
 \qstart{Which of the Seven Absolutes is known as ``the absolute of Absolutes''?}
 {Universal Father}{1}
 {Eternal Son}{0}
@@ -354,49 +361,170 @@
 
 
 \qpaper{1}{The Universal Father}
+
 \qpaper{2}{The Nature of God}
+
 \qpaper{3}{The Attributes of God}
+
 \qpaper{4}{God’s Relation to the Universe}
+
+\qstart{Who forbade the Hebrews to perform the human sacrifices?}
+{Abraham}{0}
+{Moses}{1}
+{Joshua}{0}
+{Jesus}{0}
+{Paul}{0}
+{Peter}{0}
+\qstop
+
 \qpaper{5}{God’s Relation to the Individual}
+
 \qpaper{6}{The Eternal Son}
+
 \qpaper{7}{Relation of the Eternal Son to the Universe}
+
 \qpaper{8}{The Infinite Spirit}
+
 \qpaper{9}{Relation of the Infinite Spirit to the Universe}
+
 \qpaper{10}{The Paradise Trinity}
+
 \qpaper{11}{The Eternal Isle of Paradise}
+
+\qstart{Does space respond to gravity?}
+{no}{1}
+{yes}{0}
+\qstop
+
+\qstart{Can pervaded space neutralize linear gravity?}
+{yes}{1}
+{no}{0}
+\qstop
+
+\qstart{Can pervaded space delay linear gravity?}
+{yes}{0}
+{no}{1}
+\qstop
+
 \qpaper{12}{The Universe of Universes}
+
 \qpaper{13}{The Sacred Spheres of Paradise}
+
 \qpaper{14}{The Central and Divine Universe}
+
 \qpaper{15}{The Seven Superuniverses}
+
+\qstart{How many stars are there in the superuniverse of Orvonton?}
+{70 trillion}{0}
+{10 trillion}{1}
+{1 trillion}{0}
+{700 million}{0}
+{70 million}{0}
+\qstop
+
+\qstart{How many planets in our solar system are at present suited to harbour life?}
+{one (Urantia)}{0}
+{two}{0}
+{three}{1}
+{four}{0}
+{five}{0}
+{six}{0}
+{seven}{0}
+{eight}{0}
+{nine}{0}
+\qstop
+
+\qstart{How many of the cool planets in our superuniverse are habitable by beings of our order?}
+{fewer than 1 in 5}{0}
+{fewer than 1 in 10}{0}
+{fewer than 1 in 40}{1}
+{fewer than 1 in 100}{0}
+{fewer than 1 in 1,000}{0}
+{fewer than 1 in 1,000,000}{0}
+\qstop
+
+\qstart{Which of these space bodies have had an evolutionary origin?}
+{The suns}{1}
+{The dark islands of space}{1}
+{Comets, meteors, and planetesimals}{1}
+{Planets (including inhabited)}{1}
+{Architectural spheres}{0}
+\qstop
+
 \qpaper{16}{The Seven Master Spirits}
+
 \qpaper{17}{The Seven Supreme Spirit Groups}
+
 \qpaper{18}{The Supreme Trinity Personalities}
+
 \qpaper{19}{The Co\hyp{}ordinate Trinity\hyp{}Origin Beings}
+
 \qpaper{20}{The Paradise Sons of God}
+
 \qpaper{21}{The Paradise Creator Sons}
+
 \qpaper{22}{The Trinitized Sons of God}
+
 \qpaper{23}{The Solitary Messengers}
+
 \qpaper{24}{Higher Personalities of the Infinite Spirit}
+
 \qpaper{25}{The Messenger Hosts of Space}
+
 \qpaper{26}{Ministering Spirits of the Central Universe}
+
 \qpaper{27}{Ministry of the Primary Supernaphim}
+
 \qpaper{28}{Ministering Spirits of the Superuniverses}
+
 \qpaper{29}{The Universe Power Directors}
+
 \qpaper{30}{Personalities of the Grand Universe}
+
 \qpaper{31}{The Corps of the Finality}
+
 \qpaper{32}{The Evolution of Local Universes}
+
 \qpaper{33}{Administration of the Local Universe}
+
 \qpaper{34}{The Local Universe Mother Spirit}
+
+\qstart{Which of these has deprived human races of that superior type of physical nature which would have been more consonant with spiritual aspirations?}
+{Lucifer rebellion}{0}
+{Caligastia upheaval}{0}
+{Adamic default}{1}
+\qstop
+
 \qpaper{35}{The Local Universe Sons of God}
+
 \qpaper{36}{The Life Carriers}
+
 \qpaper{37}{Personalities of the Local Universe}
+
 \qpaper{38}{Ministering Spirits of the Local Universe}
+
 \qpaper{39}{The Seraphic Hosts}
+
 \qpaper{40}{The Ascending Sons of God}
+
 \qpaper{41}{Physical Aspects of the Local Universe}
+
 \qpaper{42}{Energy --- Mind and Matter}
+
+\qstart{How many ultimatons make one electron?}
+{3}{0}
+{10}{0}
+{100}{1}
+{300}{0}
+{777}{0}
+{1000}{0}
+{70,000}{0}
+\qstop
+
 \qpaper{43}{The Constellations}
+
 \qpaper{44}{The Celestial Artisans}
+
 \qpaper{45}{The Local System Administration}
 
 \qstart{What is the registration number of our planet (Urantia) in the local system of Satania?}
@@ -419,7 +547,22 @@
 {37,001}{0}
 \qstop
 
+\qstart{Who is the current System Sovereign?}
+{Lucifer}{0}
+{Lanaforge}{1}
+{Machiventa Melchizedek}{0}
+{Jesus of Nazareth}{0}
+{Enoch the Scribe}{0}
+\qstop
+
+\qstart{How many seats on the Urantia Advisory Council of 24 do Adam and Eve occupy?}
+{two seats, \#9 and \#10}{1}
+{one shared seat}{0}
+{none, they are not members}{0}
+\qstop
+
 \qpaper{46}{The Local System Headquarters}
+
 \qpaper{47}{The Seven Mansion Worlds}
 
 \qstart{On which of the mansion worlds is the resurrection hall located?}
@@ -464,11 +607,170 @@
 
 \qpaper{59}{The Marine\hyp{}Life Era on Urantia}
 
+\qstart{Into how many geologic eras is the history of our planet divided?}
+{3}{0}
+{5}{1}
+{7}{0}
+{10}{0}
+{12}{0}
+\qstop
+
+\qstart{When was the Archeozoic (prelife) era?}
+{1 billion to 550 million years ago}{1}
+{500 to 400 million years ago}{0}
+{100 to 50 million years ago}{0}
+\qstop
+
+\qstart{When was the Proterozoic (life dawn) era?}
+{10 to 5 million years ago}{0}
+{400 to 300 million years ago}{0}
+{550 to 400 million years ago}{1}
+\qstop
+
+\qstart{When was the Paleozoic (marine-life) era?}
+{200 to 50 million years ago}{0}
+{400 to 150 million years ago}{1}
+{541 to 252 million years ago}{0}
+\qstop
+
+\qstart{When was the Mesozoic (early land-life) era?}
+{10 to 5 million years ago}{0}
+{50 to 10 million years ago}{0}
+{150 to 50 million years ago}{1}
+\qstop
+
+\qstart{When was the Cenozoic (mammalian) era?}
+{6000 years ago to the present}{0}
+{5 milion years ago to the present}{0}
+{50 million years ago to the present}{1}
+{150 million years ago to the present}{0}
+\qstop
+
+\qstart{Into how many geologic ages is the Paleozoic era divided?}
+{3}{0}
+{5}{0}
+{6}{1}
+{7}{0}
+{12}{0}
+\qstop
+
+\qstart{When was the Cambrian (trilobite) age, the first age of the Paleozoic era?}
+{50 to 15 million years ago}{0}
+{400 to 225 million years ago}{0}
+{400 to 350 million years ago}{1}
+{540 to 480 million years ago}{0}
+\qstop
+
+\qstart{When was the Ordovician (invertebrate-animal) age, the second age of the Paleozoic era?}
+{50 to 25 million years ago}{0}
+{485 to 443 million years ago}{0}
+{350 to 300 million years ago}{1}
+{410 to 100 million years ago}{0}
+\qstop
+
+\qstart{When was the Silurian (coral and brachiopod) age, the third age of the Paleozoic era?}
+{145 to 130 million years ago}{0}
+{300 to 270 million years ago}{1}
+{300 to 100 million years ago}{0}
+{440 to 400 million years ago}{0}
+\qstop
+
+\qstart{When was the Devonian (plant life, fishes) age, the fourth age of the Paleozoic era?}
+{30 to 15 million years ago}{0}
+{200 to 175 million years ago}{0}
+{270 to 220 million years ago}{1}
+{419 to 358 million years ago}{0}
+\qstop
+
+\qstart{When was the Carboniferous (fern forests, frogs) age, the fifth age of the Paleozoic era?}
+{35 to 29 million years ago}{0}
+{100 to 70 million years ago}{0}
+{220 to 180 million years ago}{1}
+{359 to 299 million years ago}{0}
+\qstop
+
+\qstart{When was the Permian (seed-plants; biologic tribulation) age, the sixth and the last age of the Paleozoic era?}
+{25 to 11 million years ago}{0}
+{110 to 60 million years ago}{0}
+{170 to 150 million years ago}{1}
+{290 to 250 million years ago}{0}
+\qstop
+
+\qstart{Into how many geologic ages is the Mezozoic (early land-life) era divided?}
+{3}{1}
+{4}{0}
+{5}{0}
+{7}{0}
+\qstop
+
+\qstart{When was the Triassic (early-reptilian) age, the first age of the Mezozoic era?}
+{75 to 40 million years ago}{0}
+{150 to 125 million years ago}{1}
+{200 to 100 million years ago}{0}
+{250 to 200 million years ago}{0}
+\qstop
+
+\qstart{When was the Jurassic (later-reptilian) age, the second age of the Mezozoic era?}
+{60 to 35 million years ago}{0}
+{150 to 50 million years ago}{0}
+{125 to 100 million years ago}{1}
+{200 to 145 million years ago}{0}
+\qstop
+
+\qstart{When was the Cretaceous (flowering plants, birds) age, the third and the last age of the Mezozoic era?}
+{5 million years ago to the present}{0}
+{80 to 25 million years ago}{0}
+{100 to 50 million years ago}{1}
+{145 to 66 million years ago}{0}
+\qstop
+
 \qpaper{60}{Urantia During the Early Land\hyp{}Life Era}
+
+\qstart{When did the first (nonplacental) mammals appear on our planet?}
+{\textasciitilde 135 million years ago}{1}
+{\textasciitilde 200 million years ago}{0}
+{\textasciitilde 100 million years ago}{0}
+{\textasciitilde 50 million years ago}{0}
+{\textasciitilde 10 million years ago}{0}
+\qstop
 
 \qpaper{61}{The Mammalian Era on Urantia}
 
+\qstart{When did the horse (as it now exists) evolve?}
+{5 million years ago}{1}
+{3 million years ago}{0}
+{1 million years ago}{0}
+{350,000 years ago}{0}
+\qstop
+
+\qstart{Where did the horse (as it now exists) evolve?}
+{North America}{1}
+{South America}{0}
+{Africa}{0}
+{Eurasia}{0}
+{Australia}{0}
+\qstop
+
+\qstart{How old were Andon and Fonta (the first humans) when our world was registered as inhabited?}
+{0 (i.e. registered at birth)}{0}
+{5 years}{0}
+{11 years}{1}
+{16 years}{0}
+{18 years}{0}
+{30 years}{0}
+{40 years}{0}
+\qstop
+
 \qpaper{62}{The Dawn Races of Early Man}
+
+\qstart{When did the first human beings appear on our planet?}
+{6,000 years ago}{0}
+{35,000 years ago}{0}
+{47,000 years ago}{0}
+{470,000 years ago}{0}
+{870,000 years ago}{0}
+{1 million years ago}{1}
+\qstop
 
 \qpaper{63}{The First Human Family}
 
@@ -481,6 +783,14 @@
 \qstop
 
 \qpaper{64}{The Evolutionary Races of Colour}
+
+\qstart{How long ago did the coloured races of humans appear?}
+{1 million years}{0}
+{500,000 years}{1}
+{100,000 years}{0}
+{46,000 years}{0}
+{6,000 years ago}{0}
+\qstop
 
 \qstart{Which of these was a great leader of green men 350,000 years ago?}
 {Onagar}{0}
@@ -539,6 +849,21 @@
 
 \qpaper{73}{The Garden of Eden}
 
+\qstart{Who guarded the tree of life in the garden of Eden after Adam and Eve left it?}
+{seraphim with a sword}{0}
+{cherubim with a flaming sword turning every way}{0}
+{primary midwayers}{0}
+{secondary midwayers}{0}
+{no one}{1}
+\qstop
+
+\qstart{What happened to the Nodites after they ate of the tree of life?}
+{nothing}{1}
+{it poisoned them}{0}
+{lightning struck them dead}{0}
+{they developed stomach cancer within 7 days}{0}
+\qstop
+
 \qpaper{74}{Adam and Eve}
 
 \qstart{What was the serial number of Adam and Eve of Urantia?}
@@ -550,6 +875,20 @@
 {66,666}{0}
 \qstop
 
+\qstart{How long did it take to rematerialize the bodies of Adam and Eve after they arrived from Jerusem on seraphic transport?}
+{1 day}{0}
+{7 days}{0}
+{10 days}{1}
+{12 days}{0}
+{40 days}{0}
+\qstop
+
+\qstart{At rematerialization of Adam and Eve, who regained consciousness first?}
+{Adam}{0}
+{Eve}{0}
+{both simultaneously}{0}
+\qstop
+
 \qstart{What was the height of Adam and Eve?}
 {1.65\,m}{0}
 {1.8\,m}{0}
@@ -558,6 +897,22 @@
 {2.8\,m}{0}
 {3.1\,m}{0}
 {3.5\,m}{0}
+\qstop
+
+\qstart{What was the name of the firstborn son of Adam and Eve born on this planet?}
+{Cain}{0}
+{Abel}{0}
+{Adamson}{1}
+{Eveson}{0}
+{Seth}{0}
+\qstop
+
+\qstart{What was the name of the second son of Adam and Eve born on this planet?}
+{Cain}{0}
+{Abel}{0}
+{Adamson}{0}
+{Eveson}{1}
+{Seth}{0}
 \qstop
 
 \qstart{At what age did Adamic children cease to nurse the mother's breast?}
@@ -620,6 +975,16 @@
 {2,912 pure\hyp{}line descendants}{0}
 \qstop
 
+\qstart{How long did Adam and Eve live in the Garden before the default?}
+{66 days}{0}
+{6 months}{0}
+{7 years}{0}
+{37 years}{0}
+{117 years}{1}
+{122 years}{0}
+{666 years}{0}
+\qstop
+
 \qpaper{75}{The Default of Adam and Eve}
 
 \qstart{Which of these was the father of Cain?}
@@ -629,6 +994,14 @@
 {Satan}{0}
 {Abraham}{0}
 {Lucifer}{0}
+\qstop
+
+\qstart{Until what age were Adamic children considered incapable of making independent decisions (``prechoice age'')?}
+{12 years}{0}
+{18 years}{0}
+{20 years}{1}
+{30 years}{0}
+{40 years}{0}
 \qstop
 
 \qpaper{76}{The Second Garden}
@@ -707,6 +1080,13 @@
 {killed by his own son}{0}
 \qstop
 
+\qstart{What happened to Laotta, the mother of Sansa?}
+{died while giving birth to Sansa}{1}
+{died of old age}{0}
+{was killed by the Nodites}{0}
+{committed suicide}{0}
+\qstop
+
 \qpaper{77}{The Midway Creatures}
 
 \qpaper{78}{The Violet Race after the Days of Adam}
@@ -769,6 +1149,14 @@
 
 \qpaper{89}{Sin, Sacrifice, and Atonement}
 
+\qstart{Which animal was domesticated first?}
+{horse}{0}
+{dog}{1}
+{cow}{0}
+{pig}{0}
+{lion}{0}
+\qstop
+
 \qpaper{90}{Shamanism --- Medicine Men and Priests}
 
 \qpaper{91}{The Evolution of Prayer}
@@ -790,6 +1178,13 @@
 
 \qpaper{94}{The Melchizedek Teachings in the Orient}
 
+\qstart{Which of these is \bibemph{not} a member of Trimurti, the supreme trinity of Hinduism?}
+{Brahma}{0}
+{Siva}{0}
+{Vishnu}{0}
+{Indra}{1}
+\qstop
+
 \qstart{The religion of Buddhism is based on the teachings of ...}
 {Lao-tse}{0}
 {Gautama Siddhartha}{1}
@@ -803,6 +1198,14 @@
 \qpaper{96}{Yahweh --- God of the Hebrews}
 
 \qpaper{97}{Evolution of the God Concept among the Hebrews}
+
+\qstart{How many of David's soldiers were Baalites?}
+{None}{0}
+{25\%}{0}
+{50\%}{0}
+{80\%}{1}
+{100\%}{0}
+\qstop
 
 \qpaper{98}{The Melchizedek Teachings in the Occident}
 
@@ -834,8 +1237,12 @@
 
 \qpaper{112}{Personality Survival}
 
-\qpaper{113}{Seraphic Guardians of Destiny}
+\qstart{Are those resurrected on the mansion worlds permitted to send messages to their loved ones here?}
+{yes}{0}
+{no}{1}
+\qstop
 
+\qpaper{113}{Seraphic Guardians of Destiny}
 
 \qstart{What is the first assignment of a resurrected mortal?}
 {Learning Satanian language}{0}
@@ -856,6 +1263,23 @@
 \qpaper{118}{Supreme and Ultimate --- Time and Space}
 
 \qpaper{119}{The Bestowals of Christ Michael}
+
+\qstart{When was the first bestowal of Michael of Nebadon?}
+{20 million years ago}{0}
+{120 million years ago}{0}
+{800 million years ago}{0}
+{1 billion years ago}{1}
+{4 billion years ago}{0}
+{10 billion years ago}{0}
+\qstop
+
+\qstart{What was the time interval between two bestowals of Michael of Nebadon?}
+{500 million years}{0}
+{150 million years}{1}
+{10 million years}{0}
+{100,000 years}{0}
+{500,000 years}{0}
+\qstop
 
 \qstart{At what time of day did Michael appear on the planet of his bestowal as a Melchizedek?}
 {early morning}{0}
@@ -974,7 +1398,23 @@
 {Never finished}{1}
 \qstop
 
+\qstart{What were Paul's disciples first called at Antioch?}
+{Paulinians}{0}
+{Christians}{1}
+{Chasidim}{0}
+{Good Antiochians}{0}
+{Essenes}{0}
+\qstop
+
 \qpaper{122}{Birth and Infancy of Jesus}
+
+\qstart{What was the ``Star of Bethlehem''?}
+{a brilliant evening star}{0}
+{a sign from God}{0}
+{Venus}{0}
+{Mars}{0}
+{a conjunction of Jupiter and Saturn}{1}
+\qstop
 
 \qpaper{123}{The Early Childhood of Jesus}
 
@@ -983,6 +1423,12 @@
 \qpaper{125}{Jesus at Jerusalem}
 
 \qpaper{126}{The Two Crucial Years}
+
+\qstart{Which book influenced Jesus to adopt as his inaugural title ``the Son of Man''?}
+{Book of Enoch}{1}
+{Daniel}{0}
+{Ezekiel}{0}
+\qstop
 
 \qpaper{127}{The Adolescent Years}
 
@@ -1100,6 +1546,12 @@
 
 \qpaper{184}{Before the Sanhedrin Court}
 
+\qstart{Why Judas Iscariot could not be used by the Sanhedrists as a witness in the ``trial'' of the Master?}
+{Judas already killed himself}{0}
+{Judas could not be found at the time of trial}{0}
+{Jewish law specifically forbade the testimony of a traitor}{1}
+\qstop
+
 \qpaper{185}{The Trial Before Pilate}
 
 \qstart{When was Jesus of Nazareth murdered by the Jews?}
@@ -1126,6 +1578,13 @@
 \qpaper{193}{Final Appearances and Ascension}
 
 \qpaper{194}{Bestowal of the Spirit of Truth}
+
+\qstart{When was Jesus of Nazareth resurrected?}
+{9 April 30 A.D.}{1}
+{10 April 30 A.D.}{0}
+{18 April 33 A.D.}{0}
+{20 April 33 A.D.}{0}
+\qstop
 
 \qpaper{195}{After Pentecost}
 
