Explain how to use the Quiz.

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -11,11 +11,11 @@
 INTRODUCTION
 \end{center}
 
-\tunemarkup{pghanlin}{\fontsize{15}{16.7}\selectfont}
-\tunemarkup{pgkobomini}{\fontsize{17}{19.5}\selectfont}
+\tunemarkup{pghanlin}{\fontsize{16}{19}\selectfont}
+\tunemarkup{pgkobomini}{\fontsize{18}{20}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{17}{20.5}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{18.5}{22}\selectfont}
 
 \bibemph{The British Study Edition of The Urantia Papers} is a translation of the Fifth Epochal Revelation (also known as ``The Urantia Book'')
 from American to British English as defined by the \bibemph{Oxford Dictionary of English}.
@@ -38,7 +38,11 @@ Many thanks to my friend Mitch Austin for helpful suggestions and comments, some
 Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to consider to be my mentor and friend.
 I highly recommend many resources available on his website at \texttt{http://www.starspring.com}.
 
-\tunemarkuptwo{pgkindledx}{}{This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) based on the material of the book called \bibemph{The Cosmic Citizenship Quiz}.}
+\tunemarkuptwo{pgkindledx}{}{%
+This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) called \bibemph{The Cosmic Citizenship Quiz}.
+To use the quiz simply click on the symbol \quizsymbol\ at the end of any Paper or click on the title of any Paper in the text section.
+Clicking on the Paper's title in the quiz section will return you back to that Paper in the text section.
+}
 
 \begin{flushleft}
 \itshape
