--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -246,10 +246,12 @@
 
 \RequirePackage{enumitem}
 
+\newcommand{\quizsymbol}{\textcolor{ublinkcolor}{\usefont{U}{webo}{xl}{n}7}}
+
 \newcommand{\quizlink}{%
   \par
   \vspace*{\stretch{0.1}}%
-  \begin{center}\usefont{U}{webo}{xl}{n}\hyperlink{qc\thepaper}{\Huge\textcolor{ublinkcolor}{7}}\end{center}%
+  \begin{center}\hyperlink{qc\thepaper}{\Huge\quizsymbol}\end{center}%
   \vspace*{\stretch{0.9}}%
 }
 
