Mention the number of questions on the title page

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -60,7 +60,7 @@ Study Notes \&\ \totalfigures\ Illustrations\\[1pt]
 }
 \tunemarkup{pgnexus7}{\textcolor{ubdarkred}{With Words of Jesus in Red Colour}\\[1pt]}
 Edited by Tigran Aivazian\\[2ex]
-\tunemarkuptwo{pgkindledx}{}{With Interactive Cosmic Citizenship Quiz\\}
+\tunemarkuptwo{pgkindledx}{}{With Interactive Cosmic Citizenship Quiz\\(\totalcurqs\ questions in total)\\}
 }%
 \vspace*{\stretch{0.6}}
 \tunemarkuptwo{nofancydecor}{}{%
